--- a/.helm/templates/deployment.yaml
+++ b/.helm/templates/deployment.yaml
@@ -17,6 +17,10 @@ spec:
       containers:
       - name: app
         image: {{ .Values.werf.image.app }}
-        command: ["/app/start.sh"]
+        command:
+          - uvicorn
+          - main:app
+          - --host 0.0.0.0
+          - --port 8000
         ports:
         - containerPort: 8000
