--- a/.helm/templates/deployment.yaml
+++ b/.helm/templates/deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
       - name: app
         image: {{ .Values.werf.image.app }}
+        command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
         ports:
         - containerPort: 8000
