--- a/.helm/templates/ingress.yaml
+++ b/.helm/templates/ingress.yaml
@@ -3,16 +3,16 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
-  name: werf-guide-app
+  name: web-app
 spec:
   rules:
-  - host: werf-guide-app.test
+  - host: web-app.test
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: werf-guide-app
+            name: web
             port:
               number: 8000
