--- a/.helm/templates/service.yaml
+++ b/.helm/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: werf-guide-app
+  name: web-app
 spec:
   selector:
-    app: werf-guide-app
+    app: web-app
   ports:
   - name: http
     port: 8000
