--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,17 @@
 fastapi==0.95.1
+fastapi-jwt
+python-multipart
 uvicorn==0.22.0
+environs==9.5.0
+SQLAlchemy==2.0.12
+psycopg2
+passlib
+pytest
+pytest-asyncio
+pydantic[email]
+httpx==0.24.0
+asyncpg
+alembic==1.11.1
+celery==5.3.1
+
+starlette_admin
